<resources>
    <string name="app_name">Paxitor</string>
    <string name="hint2">b</string>
    <string name="hint1">a</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>

    <string name="bro">3</string>
    <string name="bro2">4</string>
    <string name="default_out">a+b</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="mod">%</string>
    <string name="exp">^</string>
    <string name="log">log</string>
    <string name="web">web</string>

</resources>
